// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Reports should render list depending of TOTAL value expect to render empty list even though is not fetching and items.length > 0. Using Total = 0 1`] = `
<ReportsPage>
  <TableToolbar
    className="pf-u-justify-content-space-between"
    isFooter={false}
  >
    <ToolbarGroup>
      <ToolbarItem
        className="pf-u-mr-xl"
      >
        <Formik
          enableReinitialize={false}
          initialValues={
            Object {
              "filterText": "",
            }
          }
          isInitialValid={false}
          onSubmit={[Function]}
          validate={[Function]}
          validateOnBlur={true}
          validateOnChange={true}
        >
          <Component />
        </Formik>
      </ToolbarItem>
      <ToolbarItem
        className="pf-u-mr-md"
      >
        <Link
          className="pf-c-button pf-m-primary"
          replace={false}
          to="/reports/upload"
        >
          Create
        </Link>
      </ToolbarItem>
    </ToolbarGroup>
    <ToolbarGroup>
      <ToolbarItem>
        <Pagination
          itemCount={0}
          onPageInput={[Function]}
          onPerPageSelect={[Function]}
          onSetPage={[Function]}
          page={1}
          perPage={10}
        />
      </ToolbarItem>
    </ToolbarGroup>
  </TableToolbar>
  <Card>
    <CardBody>
      <EmptyState
        variant="full"
      >
        <EmptyStateIcon
          icon={[Function]}
        />
        <Title
          headingLevel="h5"
          size="lg"
        >
          No results found
        </Title>
        <EmptyStateBody>
          No results match the search criteria
        </EmptyStateBody>
      </EmptyState>
    </CardBody>
  </Card>
</ReportsPage>
`;

exports[`Reports should render list depending of TOTAL value expect to render list even though is fetching. Using Total > 0 1`] = `
<ReportsPage>
  <TableToolbar
    className="pf-u-justify-content-space-between"
    isFooter={false}
  >
    <ToolbarGroup>
      <ToolbarItem
        className="pf-u-mr-xl"
      >
        <Formik
          enableReinitialize={false}
          initialValues={
            Object {
              "filterText": "",
            }
          }
          isInitialValid={false}
          onSubmit={[Function]}
          validate={[Function]}
          validateOnBlur={true}
          validateOnChange={true}
        >
          <Component />
        </Formik>
      </ToolbarItem>
      <ToolbarItem
        className="pf-u-mr-md"
      >
        <Link
          className="pf-c-button pf-m-primary"
          replace={false}
          to="/reports/upload"
        >
          Create
        </Link>
      </ToolbarItem>
    </ToolbarGroup>
    <ToolbarGroup>
      <ToolbarItem>
        <Pagination
          itemCount={2}
          onPageInput={[Function]}
          onPerPageSelect={[Function]}
          onSetPage={[Function]}
          page={1}
          perPage={10}
        />
      </ToolbarItem>
    </ToolbarGroup>
  </TableToolbar>
  <Table
    aria-label="Reports list"
    borders={true}
    canSelectAll={true}
    cells={
      Array [
        "Name",
        "Status",
        Object {
          "props": Object {
            "className": "pf-u-text-align-center",
          },
          "title": "",
        },
      ]
    }
    className=""
    contentId="expanded-content"
    dropdownDirection="down"
    dropdownPosition="right"
    expandId="expandable-toggle"
    gridBreakPoint="grid-md"
    role="grid"
    rowLabeledBy="simple-node"
    rows={
      Array [
        Object {
          "cells": Array [
            Object {
              "title": <span>
                My report name 36
              </span>,
            },
            Object {
              "title": <p>
                <InProgressIcon
                  className="progress"
                  color="currentColor"
                  noVerticalAlign={false}
                  size="sm"
                  title={null}
                />
                 Analyzing the upload file
              </p>,
            },
            Object {
              "title": "",
            },
          ],
        },
        Object {
          "cells": Array [
            Object {
              "title": <span>
                My report name 37
              </span>,
            },
            Object {
              "title": <p>
                <InProgressIcon
                  className="progress"
                  color="currentColor"
                  noVerticalAlign={false}
                  size="sm"
                  title={null}
                />
                 Analyzing the upload file
              </p>,
            },
            Object {
              "title": "",
            },
          ],
        },
      ]
    }
    variant={null}
  >
    <TableHeader />
    <TableBody />
    <tfoot>
      <tr>
        <td
          colSpan={10}
        >
          <Pagination
            itemCount={2}
            onPageInput={[Function]}
            onPerPageSelect={[Function]}
            onSetPage={[Function]}
            page={1}
            perPage={10}
          />
        </td>
      </tr>
    </tfoot>
  </Table>
</ReportsPage>
`;
